<resources>
    <string name="app_name">Calculadora</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnAdd">+</string>
    <string name="btnSubs">-</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivide">/</string>
    <string name="btnDelete">C</string>
    <string name="btnEqual">=</string>
    <string name="btnSin">sen(</string>
    <string name="btnCos">cos(</string>
    <string name="btnTan">tan(</string>
    <string name="btnPA">(</string>
    <string name="btnPC">)</string>
    <string name="btnX">x</string>
    <string name="btnExp">^</string>
    <string name="btnLn">ln(</string>
    <string name="btnLog">log(</string>
    <string name="btnSqrt">sqr(</string>
    <string name="btnE">e</string>
    <string name="btnPorc">%</string>
    <string name="btnAcerca">Ace</string>
    <string name="title_activity_acerca_de">Acerca de</string>
    <string name="nombre">Elaborado  por Estrada Granados Diego</string>
    <string name="materia">Programacion Avanzada I: Android</string>
    <string name="version">Version 1</string>
    <string name="btnRegresar">Regresar</string>
    <string name="btnAcercaDe">Acerca de ...</string>

    <string name="todo">TODO</string>
    <string name="itemHistorial">Historial</string>
    <string name="btnBorrar">Borrar</string>
    <string name="itemGraficar">Graficar</string>
    <string name="tstDatosGuardados">Datos guardados</string>
    <string name="tstSinDatosGuardados">No hay registro de operaciones realizadas</string>
    <string name="tstDatosEliminados">Datos eliminados</string>
    <string name="tstZoom">Zoom</string>
    <string name="btnGraficar">Graficar</string>
    <string name="etInstGraficar">Ingrese una función dependiente de X</string>
    <string name="lblAndroidPlot">Graficador de funciones</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calculadora</string>
    <string name="nav_header_subtitle">diegoestrada97@hotmail.com</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="action_settings">Configuración</string>
    <string name="itemConfiguracion">Configuración</string>
    <string name="menuCompartir">Compartir</string>
    <string name="menuConfiguracion">Configuración</string>
    <string name="menuFeedback">Enviar feedback</string>


</resources>
