<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="299dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btn7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btn8"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button9"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btn9"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="72dp"
        android:layout_height="67dp"
        android:onClick="borrar"
        android:text="@string/btnDelete"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btn4"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btn5"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button6"
        android:layout_width="67dp"
        android:layout_height="68dp"
        android:onClick="presiona"
        android:text="@string/btn6"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btnDivide"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />


    <Button
        android:id="@+id/button1"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btn1"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btn2"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtract"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btn3"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btnMultiply"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/button0"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btn0"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btnSubs"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="presiona"
        android:text="@string/btnAdd"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSubtract"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:onClick="verificar"
        android:text="@string/btnEqual"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/button11"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="lanzarAcercaDe"
        android:text="@string/btnAcercaDe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>